k8/4.be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
      - name: be
        image: animshamura/los-be:9
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: be
spec:
  selector:
    app: be
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
