k8/5.fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
      - name: fe
        image: animshamura/los-fe
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fe
spec:
  selector:
    app: fe
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
