k8/6.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: los-ingress
  namespace: los
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: aeslos.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /?(.*)
        backend:
          service:
            name: fe
            port:
              number: 3000
              
      - pathType: ImplementationSpecific
        path: /api/?(.*)
        backend:
          service:
            name: be
            port:
              number: 8082
